<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.CreateTodoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_todo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip">

            <EditText
                android:id="@+id/edt_todo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/enter_title"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_todo_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edt_todo_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:hint="@string/enter_content"
                android:inputType="textMultiLine|textFilter" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deadline"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edt_date_pick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"/>
        <EditText
            android:id="@+id/edt_time_pick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>